--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,14 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Duongnxpk00662_DienToanDamMay.jar
+dist.jar=${dist.dir}/Duongnxpk00662_ASM_DienToanDamMay.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.20-bin.jar=lib\\mysql-connector-java-5.1.20-bin.jar
 file.reference.sqljdbc4.jar=lib\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.20-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
